# rest_api_tests

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  delete_v1_account_login.py  delete_v1_account_login_all.py  get_v1_account.py  post_v1_account.py  post_v1_account_login.py  post_v1_account_password.py  put_v1_account_email.py  put_v1_account_password.py  put_v1_account_token.py  pyproject.toml  pytest-telegram-notifier.ini  pytest.ini  requirements.txt  setup.cfg
.github/: allure_to.yml  python.yml  run_tests.yml
.github/workflows/: allure_to.yml  python.yml  run_tests.yml  run_tests_allure.yml
apis/dm_api_account/: utilities.py
apis/dm_api_search/: dm_api_search.py  search.proto  search_pb2.pyi  search_pb2_grpc.py  search_pb2_grpc.pyi
common/db_client/: __init__.py  client.py  utilities.py
common/orm_client/: __init__.py  client.py  utilities.py
common/restclient/: __init__.py  utilities.py
common_libs/db_client/: __init__.py  db_client.py
common_libs/orm_client/: __init__.py  (+2 more)
config/: prod.yaml  stg.yaml
data/: post_v1_account.py
db_client/: db_client.py
dm_api_account/: utilities.py
generic/: __init__.py
modules/: __init__.py
orm_client/: orm_client.py
restclient/: restclient.py
services/: dm_api_account.py  mailhog.py
tests/: test_delete_v1_account_login.py  test_delete_v1_account_login_all.py  test_get_v1_account.py  test_post_v1_account.py  test_post_v1_account_login.py  test_post_v1_account_password.py  test_put_v1_account_email.py  test_put_v1_account_password.py  test_put_v1_account_token.py
(+90 files in other folders)
